<resources>

    <string name="app_name">Happy House</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="about_name">About Happy House</string>
    <string name="about_info"></string>
    <string name="about_create_support">was created by Halmi Arai\nsupported by Thoru Yamato</string>
    <string name="about_special_thanks">Special Thanks to Ms. Soko Oshida (Windows)</string>
    <string name="about_copyright">&#169;1995 Halmi Arai</string>
    <string name="about_farewell">Good night &amp; Sweet dreams, Ruby. I love you always.</string>
    <string name="about_android">Android version</string>
    <string name="about_adam">was developed by Adam Harley\nusing Swifty Xena Pro, dirOpener, ImgXtra, AudioXtra and Adobe Director</string>
    <string name="settings_name">Settings</string>
    <string name="settings_volume">Volume</string>
    <item format="float" name="default_volume" type="string">1.0</item>
    <string name="settings_filter">Pixel art smoothing</string>
    <string name="settings_filter_on">Enabled</string>
    <string name="settings_filter_off">Disabled</string>
    <bool name="default_filter">false</bool>

</resources>
